--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
+    "lodash": "^4.17.11",
     "react": "^16.2.0",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "1.1.1",
+    "reactstrap": "5.0.0-beta"
   },
   "scripts": {
     "start": "react-scripts start",
